added DisplayName annotations and an extra edge case to GlobalExceptionHandlerValidationTest suite